infrastructure/kitos-dev/kitos/services/kitos-pubsub-broker/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    easyhosting.io/service-reference: PubSub.Broker/Dockerfile
    easyhosting.io/service-unique-id: c17bd0bf-0e17-4a52-ac4a-5becb691c32e
    easyhosting.io/easy-hosting-domain-name: c17bd0bf-0e17-4a52-ac4a-5becb691c32e.kitos-dev.strongminds.easyhosting.strongminds.dev
  labels:
    app: kitos-pubsub-broker
  name: kitos-pubsub-broker
  namespace: kitos
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: kitos-pubsub-broker
  template:
    metadata:
      annotations:
        sidecar.opentelemetry.io/inject: "false"
      labels:
        app: kitos-pubsub-broker
    spec:
      containers:
      - env: []
        image: '{will be replaced by build pipeline}'
        name: kitos-pubsub-broker
        ports: []
        resources:
          limits:
            memory: 512Mi
            cpu: 1
          requests:
            memory: 128Mi
            cpu: 100m
      imagePullSecrets:
      - name: 90d73529-a238-405b-a079-3eea2e8e36e6
